engine/codex-rs/tui/src/thread_transcript/snapshots/codex_tui__thread_transcript__tools__tests__agent_tool_fallbacks_preserve_status_without_duplicating_v2_activity.snap
---
source: tui/src/thread_transcript/tools_tests.rs
expression: "snapshots.join(\"\\n\")"
---
agent tool: SpawnAgent · In progress at last update
agent tool: SendInput · Failed
agent tool: CloseAgent · Interrupted
agent tool: ResumeAgent · Failed
agent tool: Wait · Interrupted
